--- a/Rio/assets/css/style.css
+++ b/Rio/assets/css/style.css
@@ -17,19 +17,36 @@ nav {
     justify-content: space-around;
     margin: 0 auto;
     width:100%;
+    flex-wrap: wrap;
     }
 
 .logo {
-    height: 100px;
-    width: 100px;
+    height: 75px;
+    width: 75px;
 }
 
 /* Content  */
+#banniere {
+    position: relative;
+}
+
+
 #ban {
     height: 300px;
     width: 100%;
     position: relative
 
+}
+
+.logoQuestion {
+    height: 50px;
+    width: 50px;
+    vertical-align: bottom;
+    margin-bottom: -0.5em;
+}
+
+h1 {
+    margin-bottom: 40px;
 }
 
 .show-article {
@@ -60,14 +77,21 @@ nav {
     text-align: center;
 }
 
+div>iframe {
+    border: 5px solid black;
+    border-radius: 10px;
+}
+
 .container {
     display: flex;
 }
 
 section {
     text-align: justify;
-    margin: 10px 70px 10px 0;
+    margin: 0 70px 10px 0;
 }
+
+/* Aside */
 
 aside {
     background-color: black;
@@ -77,6 +101,7 @@ aside {
     flex-direction: column;
     position: relative;
 }
+
 aside>div:first-child{
     flex: 1;
 }
@@ -87,27 +112,38 @@ aside h2 {
 
 aside figure {
     text-align: center;
+
 }
 
+aside figure img {
+    height:200px; 
+    width:200px;
+}
+    
 .logoAside {
     height: 50px;
     width: 50px;
+    border-radius: 10px;
+}
 
+.logoAside2 {
+    height: 50px;
+    width: 100px;
+}
+
+.bold {
+    font-weight: bold;
 }
 
 #space {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    
-    
-   
-    
 }
 
 .nomarging {
     margin: 0;
-    color:black;
+    border: 1px solid black;
 }
 
 #button {
@@ -118,24 +154,18 @@ aside figure {
 
 /* Footer */
 
-
-footer>div:first-child {
-    flex:0.5;
+#flex{
+    flex:1;
+    margin: 0 1em;
 }
-
-.marginImage {
-    margin-right: 2px;
-}
-
-#marginForm {
-    margin-bottom: 20px;
+.sizeImage {
+    margin-right: 1em;
+    height:100px; 
+    width:100px;
 }
 
 #spaceFooter {
-
+    width: 100%;
     justify-content: space-around;
     flex-wrap: wrap;
-
-    flex: 2;
-
 }
