--- a/VIBES/assets/css/style.css
+++ b/VIBES/assets/css/style.css
@@ -1,7 +1,7 @@
 :root {
     --main-color: #e85682;
     --main-color-darker: #e3855f;
-    --main-color-lighter:rgb(255, 255, 255);
+    --main-color-lighter:#ffffff;
   }
 
 *{
@@ -31,6 +31,7 @@ html{
     scroll-behavior: smooth;
 }
 body{
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     background: linear-gradient(to bottom, rgba(227, 133, 95, 0.7), rgb(231, 124, 98), #e97367, #eb6a6d, #eb6175, #eb6175, #eb6175, #eb6175, #eb6a6d, #e97367, #e77c62, #e3855f) repeat;
 }
@@ -52,7 +53,9 @@ hr {
     padding-bottom: 3em;
     color: var(--main-color);
 }
-
+.center{
+    text-align: center;
+}
 /* Header  */
 
 
@@ -102,8 +105,15 @@ nav>a:hover{
     width: 100%;
     background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url('../img/index.jpg') no-repeat;
     background-size: cover;
-    padding: 8em;
+    padding: 7em 11em;
     color: var(--main-color-lighter);
+}
+#topBan p{
+    margin-bottom: 2em;
+}
+#topBan a{
+    border: 2px solid white;
+    padding: 0.5em;
 }
 
 /* Section Infos */
@@ -113,25 +123,36 @@ nav>a:hover{
 	flex-wrap: wrap;
 }
 
+#infoJustify p{
+    text-align: justify;
+}
+#spain{
+    color: var(--main-color);
+}
 section#infos>* {
     flex:1;
 } 
-section#infos:not(i){
-    font-size: 0.8em;
+#middleInfoSection{
+    margin: 0 1em;
 }
 section#infos>div>dl>dt{
     font-weight: bold;
     margin: 0;
-
 }
-
+small{
+    color: grey;
+}
 section#infos>div>dl>dt>i{
     float: left;
     padding-right: 1rem;
     color: var(--main-color);
 }
-
-
+dd{
+    margin-bottom: 1em;
+}
+dt i {
+    font-size: 1.5em;
+}
 details {
     border: 1px solid gray;
     padding: 1em;
@@ -143,7 +164,9 @@ details>summary{
 details>summary::-webkit-details-marker { /* Pour Chrome */
     display: none;
 }
-
+summary i {
+    color: var(--main-color);
+}
 details[open] .fa-plus:before{
     content: "\f068";
 }
@@ -216,6 +239,10 @@ details[open] .fa-plus:before{
     }
 }
 
+.active{
+    color: var(--main-color);
+    font-weight: bold;
+}
 
 /* Section BlockQuotes */
 
@@ -256,9 +283,7 @@ section.horizon{
 section.horizon p{
     padding: 2em;
 }
-h2 {
-    text-align: center;
-}
+
 
 
 /* Form Section */
@@ -286,6 +311,7 @@ form.flex>div>input{
     background-color: var(--main-color);
     color: var(--main-color-lighter);
     padding: 0.5em;
+    border: 0;
 }
 form.flex>div>p>input {
     height:2em;
@@ -346,40 +372,59 @@ footer h5 {
 /* After Footer Div */
 div.end{
     display: flex;
+    justify-content: space-around;
     font-size: 0.8em;
 }
 div.end>p{
-    width:50%;
     color: var(--main-color-lighter);
+}
+.end p a {
+
+    padding: 0.5em;
+
 }
 div.end>:last-child{
     text-align: right;
 }
 
-/* Goutte */
 
+/* Gestion Goutte */
 .goutte {
     position: fixed;
-    top: 200px;
+    top: 250px;
     left:0;
     background-color: black;
     color: var(--main-color-lighter);
+    transition-duration: 1s;
+    z-index: 2;
 }
 #goutteMain{
-    padding: 0.5em;
+    padding: 0.4em;
 }
 .goutteCouleur{
     background-color: black;
     margin: 0 auto;
-    padding: 0.5em;
+    border-top: 1px dashed white;
+}
+ul{
+    padding:1px;
+}
+ul>li{
+  list-style: none;
 }
 ul>li>i{
-    margin: 5px 0;
+    margin: 5px;
 }
 .display{
     display: none;
 }
 
+#goutteMain i{
+    color: var(--main-color);
+}
+.pink{
+    color: #e85682;
+}
 .red{
     color: red;
 }
@@ -414,43 +459,4 @@ ul>li>i{
 
 
 
-@media screen and (max-width: 800px){
 
-    #burgerNav{
-        display:initial;
-    }
-    header>div{
-        justify-content: flex-end;
-    }
-    .mobileDisplay{
-        display:none;
-    }
-    .menu-mobile{
-        display: flex;
-        flex-direction:column ;
-    }
-    nav>a{
-        transition: 1s;
-    }
-    nav>a:hover{
-        padding-bottom: 0;
-        border-bottom: 0px;
-    /*
-        border-right:3px solid var(--main-color);
-        padding-right:15px;*/
-    } 
-
-    .navAnimee{
-        animation-name: navAnime;
-        animation-duration: 2s;
-        animation-timing-function: ease-in-out;
-    }
-    @keyframes navAnime {
-        from {
-            transform: scale(0);
-        }
-        to {
-            transform: scale(1);
-        }
-    }
-}
